<resources>
    <string name="app_name">teste</string>
    <string name="neto_lindo">Neto é Lindo</string>
    <string name="come_ar">Começar</string>
    <string name="bem_vindo_aos_enigmas">Bem Vindo aos Enigmas!</string>
    <string name="escreva_aqui">Escreva aqui...</string>
    <string name="que_animal_anda_pela_manh_sobre_quatro_patas_a_tarde_sobre_duas_e_a_noite_sobre_tr_s">Que animal anda pela manhã sobre quatro patas, a tarde sobre duas e a noite sobre três?</string>
    <string name="submeter">submeter</string>
    <string name="quanto_mais_lavo_mais_suja_estou">Quanto mais lavo, mais suja estou</string>
    <string name="dica">Dica</string>
    <string name="escreva_aqui_o_que_aparece_na_imagem_acima">Escreva aqui o que aparece na imagem acima ...</string>
    <string name="se_voc_chegou_at_aqui_parab_ns_gostariamos_de_saber_seu_nome_coloque_abaixo_por_favor">Se você Chegou Até aqui, Parabéns! Gostariamos de saber Seu nome, coloque abaixo por favor</string>
</resources>