<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SextaTela">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.557">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/submissao_5"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:hint="@string/escreva_aqui_o_que_aparece_na_imagem_acima"
            android:inputType="text"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit_5"
        android:layout_width="147dp"
        android:layout_height="56dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="144dp"
        android:background="#E91E63"
        android:text="@string/submeter"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/Dica3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dica"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.449" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="367dp"
        android:layout_height="339dp"
        android:layout_marginBottom="460dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/stereogram" />
</androidx.constraintlayout.widget.ConstraintLayout>